# same-game

./: Board.cpp  Board.h  CMakeLists.txt  Point.cpp  Point.h  README.md  SameGame.cpp  SameGame.h  main.cpp  sonar-project.properties  testFile.txt
.github/workflows/: pylint.yml
src/: Board.cpp  Board.h  Generator.h  NumbersGenerator.cpp  NumbersGenerator.h  Point.cpp  Point.h  SameGame.cpp  SameGame.h  main.cpp
test/: 200x200_20_colors.txt  200x200_3_colors.txt  4x4_3_colors.txt  500x500_20_colors.txt  50x50_11_colors.txt  50x50_3_colors.txt  BoardTest.cpp  CMakeLists.txt  MockedGenerator.cpp  SameGameTest.cpp  TestTools.cpp  TestTools.h  generateTestCase.py
tests/: 50x50_11_colors.txt  CMakeLists.txt  MockedGenerator.h  generate_test_case.py
